--- a/snake_js/index.html
+++ b/snake_js/index.html
@@ -117,6 +117,7 @@
         <div></div>
         </div>
     </div>
+    <embed src="/img/joan-of-arc-80bpm-11208.mp3" loop="true" autostart="true" width="200px" height="100px">
 <script src="/js/app.js"></script>
 </body>
 </html>
